<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="230dp"
        android:layout_height="35dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="60dp"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textColor="#020202"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        android:textColor="#838383"
        android:textSize="16sp"
        android:textStyle="italic"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="587dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/password"
        android:textColor="#9A9A9A"
        android:textSize="16sp"
        android:textStyle="italic"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="408dp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/username"
        android:textColor="#9A9A9A"
        android:textSize="16sp"
        android:textStyle="italic"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="537dp" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/select"
        android:textColor="#9A9A9A"
        android:textSize="16sp"
        android:textStyle="italic"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="113dp" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/password"
        android:textColor="#9A9A9A"
        android:textSize="16sp"
        android:textStyle="italic"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="307dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="111dp"
        android:layout_height="21dp"
        android:text="@string/username_heading"
        android:textColor="#0B0A0A"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="49dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="197dp"
        android:layout_height="22dp"
        android:text="@string/email_heading"
        android:textColor="#050505"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="217dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="206dp"
        android:layout_height="24dp"
        android:text="@string/course_heading"
        android:textColor="#040303"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="176dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="151dp"
        android:layout_height="24dp"
        android:text="@string/password_heading"
        android:textColor="#050505"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="374dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_heading"
        android:textColor="#040303"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="225dp"
        tools:layout_editor_absoluteY="386dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="138dp"
        android:layout_height="44dp"
        android:background="#FF3EB330"
        android:backgroundTint="#FF3EB330"
        android:text="@string/signup"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="637dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="252dp" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="51dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/signin"
        android:textColor="#3F51B5"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="180dp"
        tools:layout_editor_absoluteY="459dp" />

</androidx.constraintlayout.widget.ConstraintLayout>