<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="230dp"
        android:layout_height="35dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="60dp"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textColor="#020202"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        android:textColor="#838383"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="247dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/password"
        android:textColor="#9A9A9A"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="523dp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/username"
        android:textColor="#9A9A9A"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="159dp" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/select"
        android:textColor="#9A9A9A"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="345dp" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/password"
        android:textColor="#9A9A9A"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="435dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="111dp"
        android:layout_height="21dp"
        android:text="@string/username_heading"
        android:textColor="#0B0A0A"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="138dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="197dp"
        android:layout_height="22dp"
        android:layout_marginTop="16dp"
        android:text="@string/email_heading"
        android:textColor="#050505"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        tools:layout_editor_absoluteX="49dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="206dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/course_heading"
        android:textColor="#040303"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        tools:layout_editor_absoluteX="48dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="151dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/password_heading"
        android:textColor="#050505"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
        tools:layout_editor_absoluteX="48dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/confirm_heading"
        android:textColor="#040303"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
        tools:layout_editor_absoluteX="49dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="138dp"
        android:layout_height="44dp"
        android:background="#FF3EB330"
        android:text="@string/signup"
        android:backgroundTint="#FF3EB330"
        app:cornerRadius="50dp"
        app:iconTint="#FF3EB330"
        app:strokeColor="#FF3EB330"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="593dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/screenshot_2022_03_18_at_15_21_25" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="648dp" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="51dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/signin"
        android:textColor="#3F51B5"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="253dp"
        tools:layout_editor_absoluteY="637dp" />

</androidx.constraintlayout.widget.ConstraintLayout>