<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="63dp"
        android:layout_height="54dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="68dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_sports_kabaddi_24" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="63dp"
        android:layout_height="54dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_sports_kabaddi_24" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="31dp"
        android:text="@string/wager_challenge"
        android:textColor="#0C0B0B"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView11"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="178dp"
        android:layout_height="169dp"
        android:layout_marginStart="117dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="23dp"
        app:layout_constraintBottom_toTopOf="@+id/textView18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        app:srcCompat="@drawable/screenshot_2022_03_23_at_18_49_32" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="202dp"
        android:text="@string/return_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wager_accepted"
        android:textColor="#121111"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="405dp" />
</androidx.constraintlayout.widget.ConstraintLayout>